Fix spacing on about page, add individual LinkedIn links

--- a/src/styles/Affiliations.css
+++ b/src/styles/Affiliations.css
@@ -1,6 +1,6 @@
 h1, h4, p {
     color:black;
-    padding: 10px;
+/*    padding: 5px;  Remove padding around email and phone in about page. */
 }
 
 /* a {
