--- a/src/styles/PersonCard.css
+++ b/src/styles/PersonCard.css
@@ -24,7 +24,7 @@ h2 {
 }
 
 p.card-text {
-  margin-bottom: .25rem;
+  margin-bottom: 0rem;
 }
 
 .btn-primary {
